add github icon

--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
     <main>
       <section>
         <h1 class="title">About me</h1>
-        <p>0 experience in work, i'm autodidact in html, css, js, react, nodejs, etc</p>
+        <p class="text">0 experience in work, i'm autodidact in html, css, js, react, nodejs, etc</p>
       </section>
       <section>
         <h1 class="title">Social networks</h1>
-        <p>Facebook instagram github twitter</p>
+        <p class="text">Facebook instagram github twitter</p>
       </section>
       <section>
         <h1 class="title">Projects</h1>
         <nav class="projects-links">
-          <a class="projects-link" href="https://github.com/SummaryPuppet" target="_black">github</a>
+          <a class="projects-link" href="https://github.com/SummaryPuppet" target="_black">
+            <img class="projects-link-img" src="github-svg.svg" />
+          </a>
           <a class="projects-link" href="" target="_black"></a>
           <a class="projects-link" href="" target="_black"></a>
         </nav>
