--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adrian Salcedo</title>
-    <script type="module" crossorigin src="/assets/index.ac10c9bb.js"></script>
-    <link rel="stylesheet" href="/assets/index.a581152a.css">
+    <script type="module" crossorigin src="/assets/index.44492c6a.js"></script>
+    <link rel="stylesheet" href="/assets/index.74d24544.css">
   </head>
   <body>
     <aside class="profile">
@@ -23,16 +23,18 @@
     <main>
       <section>
         <h1 class="title">About me</h1>
-        <p>0 experience in work, i'm autodidact in html, css, js, react, nodejs, etc</p>
+        <p class="text">0 experience in work, i'm autodidact in html, css, js, react, nodejs, etc</p>
       </section>
       <section>
         <h1 class="title">Social networks</h1>
-        <p>Facebook instagram github twitter</p>
+        <p class="text">Facebook instagram github twitter</p>
       </section>
       <section>
         <h1 class="title">Projects</h1>
         <nav class="projects-links">
-          <a class="projects-link" href="https://github.com/SummaryPuppet" target="_black">github</a>
+          <a class="projects-link" href="https://github.com/SummaryPuppet" target="_black">
+            <img class="projects-link-img" src="/assets/github-svg.5b908635.svg" />
+          </a>
           <a class="projects-link" href="" target="_black"></a>
           <a class="projects-link" href="" target="_black"></a>
         </nav>
