--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a class="profile-link" href="#social-network">Social Network</a>
         <a class="profile-link" href="#projects">Projects</a>
       </nav>
+      <button id="toggle">toggle</button>
     </aside>
 
     <main>
