add media queries

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
       <section class="profile-section">
         <img class="profile-section-image" src="https://picsum.photos/200/300" /> 
       </section>
+      <section>
+        <p></p>
+      </section>
       <nav class="profile-links">
         <a class="profile-link" href="#about">About</a>
         <a class="profile-link" href="#social-network">Social Network</a>
         <a class="profile-link" href="#projects">Projects</a>
       </nav>
-      <button id="toggle">toggle</button>
     </aside>
 
     <main>
@@ -26,17 +28,16 @@
       </section>
       <section>
         <h1 class="title">Social networks</h1>
-        <p class="text">Facebook instagram github twitter</p>
+        <nav class="social-networks-links">
+          <a class="social-networks-link" href="" target="_black">
+            <img class="social-network-img" src="github-svg.svg" />
+          </a>
+          <a class="social-networks-link" href="" target="_black"></a>
+          <a class="social-networks-link" href="" target="_black"></a>
+        </nav>
       </section>
       <section>
         <h1 class="title">Projects</h1>
-        <nav class="projects-links">
-          <a class="projects-link" href="https://github.com/SummaryPuppet" target="_black">
-            <img class="projects-link-img" src="github-svg.svg" />
-          </a>
-          <a class="projects-link" href="" target="_black"></a>
-          <a class="projects-link" href="" target="_black"></a>
-        </nav>
       </section>
     </main>
     
