--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adrian Salcedo</title>
-    <script type="module" crossorigin src="/assets/index.44492c6a.js"></script>
+    <script type="module" crossorigin src="/assets/index.7c2a4e29.js"></script>
     <link rel="stylesheet" href="/assets/index.74d24544.css">
   </head>
   <body>
@@ -18,6 +18,7 @@
         <a class="profile-link" href="#social-network">Social Network</a>
         <a class="profile-link" href="#projects">Projects</a>
       </nav>
+      <button id="toggle">toggle</button>
     </aside>
 
     <main>
