--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adrian Salcedo</title>
-    <script type="module" crossorigin src="/assets/index.7c2a4e29.js"></script>
-    <link rel="stylesheet" href="/assets/index.74d24544.css">
+    <script type="module" crossorigin src="/assets/index.50a701a8.js"></script>
+    <link rel="stylesheet" href="/assets/index.9bf48959.css">
   </head>
   <body>
     <aside class="profile">
       <section class="profile-section">
         <img class="profile-section-image" src="https://picsum.photos/200/300" /> 
       </section>
+      <section>
+        <p></p>
+      </section>
       <nav class="profile-links">
         <a class="profile-link" href="#about">About</a>
         <a class="profile-link" href="#social-network">Social Network</a>
         <a class="profile-link" href="#projects">Projects</a>
       </nav>
-      <button id="toggle">toggle</button>
     </aside>
 
     <main>
@@ -28,17 +30,16 @@
       </section>
       <section>
         <h1 class="title">Social networks</h1>
-        <p class="text">Facebook instagram github twitter</p>
+        <nav class="social-networks-links">
+          <a class="social-networks-link" href="" target="_black">
+            <img class="social-network-img" src="/assets/github-svg.5b908635.svg" />
+          </a>
+          <a class="social-networks-link" href="" target="_black"></a>
+          <a class="social-networks-link" href="" target="_black"></a>
+        </nav>
       </section>
       <section>
         <h1 class="title">Projects</h1>
-        <nav class="projects-links">
-          <a class="projects-link" href="https://github.com/SummaryPuppet" target="_black">
-            <img class="projects-link-img" src="/assets/github-svg.5b908635.svg" />
-          </a>
-          <a class="projects-link" href="" target="_black"></a>
-          <a class="projects-link" href="" target="_black"></a>
-        </nav>
       </section>
     </main>
     
