--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/portafolio2/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adrian Salcedo</title>
-    <script type="module" crossorigin src="/assets/index.50a701a8.js"></script>
-    <link rel="stylesheet" href="/assets/index.9bf48959.css">
+    <script type="module" crossorigin src="/portafolio2/assets/index.50a701a8.js"></script>
+    <link rel="stylesheet" href="/portafolio2/assets/index.9bf48959.css">
   </head>
   <body>
     <aside class="profile">
@@ -32,7 +32,7 @@
         <h1 class="title">Social networks</h1>
         <nav class="social-networks-links">
           <a class="social-networks-link" href="" target="_black">
-            <img class="social-network-img" src="/assets/github-svg.5b908635.svg" />
+            <img class="social-network-img" src="/portafolio2/assets/github-svg.5b908635.svg" />
           </a>
           <a class="social-networks-link" href="" target="_black"></a>
           <a class="social-networks-link" href="" target="_black"></a>
