--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section>
         <h1 class="title">Social networks</h1>
         <nav class="social-networks-links">
-          <a class="social-networks-link" href="" target="_black">
+          <a class="social-networks-link" href="https://github.com/SummaryPuppet/" target="_black">
             <img class="social-network-img" src="/portafolio2/assets/github-svg.5b908635.svg" />
           </a>
           <a class="social-networks-link" href="" target="_black"></a>
