--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adrian Salcedo</title>
   </head>
@@ -29,7 +30,7 @@
       <section>
         <h1 class="title">Social networks</h1>
         <nav class="social-networks-links">
-          <a class="social-networks-link" href="" target="_black">
+          <a class="social-networks-link" href="https://github.com/SummaryPuppet/" target="_black">
             <img class="social-network-img" src="github-svg.svg" />
           </a>
           <a class="social-networks-link" href="" target="_black"></a>
@@ -43,6 +44,6 @@
     
     <footer></footer>
     
-    <script type="module" src="/main.js"></script>
+    <!-- <script type="module" src="/main.js"></script> -->
   </body>
 </html>
